frontend-spa/docs/CSS/Style.css
body {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    background-color: rgb(2, 3, 51);
}
table, th, td {
    border: 1px solid black;
    /* border-collapse: collapse; */
}
table.mainTable{
    margin-left: auto;
    margin-right: auto;
}
/* .table1__body tr:hover{
    background-color: rgb(173, 204, 209);
    background-color: yellow;
} */
.table1__rowFont.disabled, .table1__rowFont:hover{color:blue; font-weight: bolder;}

.table1__body tr:first-child:hover{
    background-color:rgb(21, 21, 146);
}
/* .active table1__body{
background-color: green;
} */
#appRow tr a.appRight{
    background-color: rgb(173, 204, 209);
}
#appRow tr a.appLeft {
    background-color: white;
}
/* #appRow tr a:active,
#appRow tr a:focus{
    background-color: rgb(173, 204, 209);
} */

/* #appRow tr :focus{
    background-color: rgb(173, 204, 209);
    background-color: red;
} */

/* #table1__rowHighlight tr:active */
#table1__rowHighlight :focus{
    background-color: red;
}
.table-2 {
    height: 267px;
    max-height: 267px;
    display: block;
    background-color: white;
    width: auto;
}
.table-2_header{
    background-color: rgb(219, 219, 106);
    white-space: nowrap;
}
.floatLeft { width: 65%; float: left; }
.floatRight {width: 50%; float: right; }

.container {
    overflow: scroll;
}
.table_header{
    background-color: rgb(21, 21, 146);
    color: white;
}
.table1__rowFont{
    background-color: white;
}
/* .header{
    font-size: 35px;
    font-weight: bold;
    background-color: rgb(2, 3, 56);
    color: rgb(226, 141, 71);
    opacity: 0.7;
    
} */
tbody {
    background-color: whitesmoke;
}
.appLeft h1{
    border-style: dashed;
    margin-right: 38%;
    box-shadow: 2px 2px;
    color: rgb(255, 115, 0);
    font-weight: bold;
    font-size: 35px;
}
.table-2__header{
    margin-left: 20%;
    font-size: 28px;
}
.appRight {
    background-color: rgb(173, 204, 209);
    overflow: hidden;
    height: 100%;
}
.add__releaseTaskButton{
    color: white;
    background-color: red;
    border-radius: 6px;
}
.add__releaseTaskButton:hover{
    background-color: yellow;
    color: black;
    cursor: pointer;
}
.edit__releaseTaskButton:hover{
    background-color: yellow;
    cursor: pointer;
}
.edit__releaseTaskButton{
    color: black;
    font-weight: bold;
    background-color: rgb(9, 255, 0);
    border-radius: 15px;
}
.edit-releaseTask__submit{
    background-color: rgb(245, 91, 2);
    font-weight: bold;
    border-radius: 10px;
}
.edit-releaseTask__submit:hover{
    background-color: yellow;
    cursor: pointer;
}
.floatLeft-container{
    cursor: pointer;
}
.edit__releaseTaskButton__back{
    background-color: white;
    border-radius: 8px;
    font-weight: bold;
}
.edit__releaseTaskButton__back:hover{
    background-color: yellow;
    cursor: pointer;
    font-weight: bold;
}
#alert{
    background-color: white;
    border-radius: 8px;
    font-weight: bold;
}
#alert:hover{
    background-color: yellow;
    cursor: pointer;
    font-weight: bold;
}
.create-releaseTask__submit{
    background-color: rgb(245, 91, 2);
    font-weight: bold;
    border-radius: 10px;
}
.create-releaseTask__submit:hover{
    background-color: yellow;
    cursor: pointer;
}
.add-comment__submit{
    background-color: rgb(245, 91, 2);
    font-weight: bold;
    border-radius: 10px;
}
.add-comment__submit:hover{
    background-color: yellow;
    cursor: pointer;
}
.add__commentButton{
    background-color: white;
    border-radius: 8px;
    font-weight: bold;
}
.add__commentButton:hover{
    background-color: yellow;
    cursor: pointer;
    font-weight: bold;
}
.delete_releaseTaskButton{
    background-color: white;
    border-radius: 8px;
    font-weight: bold;
}
.delete_releaseTaskButton:hover{
    background-color: yellow;
    cursor: pointer;
    font-weight: bold;
}
.reminders__button{
    background-color: white;
    border-radius: 8px;
    font-weight: bold;
}
.reminders__button:hover{
    background-color: yellow;
    cursor: pointer;
    font-weight: bold;
}
/* .edit__releaseTask h4{
    margin-left: 10%;
} */
#editStyle{
    border: solid;
    border-radius: 5%;
}

/* .edit-container{
    border: solid;
} */
/* .edit-releaseTask__header{
    margin-left: 70px;
} */
.edit-releaseTask__name{
    min-width: 50%;
}
select{
    width:20%;
}
.aboutuscopy{
    color: white;
}
.startapp{
    font-size: 25px;
    background-color: rgb(47, 223, 41);
    color: black;
    border-radius: 8px;
    cursor: pointer;
    box-shadow: 4px 4px grey
}
.startapp:hover{
    background-color: yellow;
    color: black;
    cursor: pointer;
    box-shadow: 4px 4px grey
}

